fix local error

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
         <a href="#" id="seta-voltar" class="seta-voltar desativado">
-            <img src="/src/img/seta.png" alt="seta-img voltar" class="imagem-seta">
+            <img src="./src/img/seta.png" alt="seta-img voltar" class="imagem-seta">
         </a>
 
         <article class="slider1 slide ativo">
@@ -83,7 +83,7 @@
         </article>
 
         <a href="#" id="seta-avancar" class="seta-avancar">
-            <img src="/src/img/seta.png" alt="seta-img avancar" class="imagem-seta">
+            <img src="./src/img/seta.png" alt="seta-img avancar" class="imagem-seta">
         </a>
     </div>
 
